[tool.poetry]
name = "maat-machine"
version = "0.1.0"
description = "Yet another package designed to simplify coding for data science and machine learning"
authors = ["Dmitry Vlasov <dmitry.v.vlasov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "maat_machine"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
